# vox

./: +  .gitignore  Cargo.toml  README.md
src/: camera.rs  camera_controller.rs  lib.rs  main.rs  shader.wgsl  texture.rs
vox-core/: Cargo.toml  README.md  build.rs  profile.json
vox-core/benches/: benchmark.rs
vox-core/src/: assets.rs  bundles.rs  camera.rs  chunk.wgsl  components.rs  device_ext.rs  entity.rs  handle.rs  lib.rs  main.rs  pass_ext.rs  render.rs  resource_handle.rs  resources.rs  screens.rs  shader.wgsl  texture.rs  ui.rs  update_resource.rs  util.rs  voxel.rs  voxel_registry.rs  voxels.rs  world_ext.rs
vox-core/src/assets/: asset.rs  asset_server.rs
vox-core/src/bundles/: camera_bundle.rs  game_object.rs  object.rs  single_entity_bundle.rs
vox-core/src/components/: camerable.rs  mesh.rs  model.rs  multiple_instance.rs  object.rs  position.rs  rotation.rs  single_instance.rs  speed.rs  transform.rs
vox-core/src/entity/: player.rs  vox_entity.rs
vox-core/src/render/: as_meshes.rs  cube.rs  cube_primitive.rs  face.rs  face_direction.rs  face_orientation.rs  face_primitive.rs  instance.rs  instance_data.rs  material.rs  mesh.rs  model.rs  multi_indexed_mesh.rs  object.rs  pass.rs  phantom_mesh.rs  phantom_model.rs  quad_orientation.rs  render_server.rs  render_storage.rs  text.rs  texture.rs  vertex.rs
vox-core/src/render/as_meshes/: chunk.rs  cube.rs  cube_primitive.rs  face.rs  face_primitive.rs  quad.rs  quad_primitive.rs  voxel_face.rs
vox-core/src/resources/: asset_server.rs  camera_context.rs  default_pipeline.rs  device.rs  draw_context.rs  frame_context.rs  game_state.rs  glyphon_pass.rs  glyphon_renderer.rs  gui_context.rs  input.rs  model_pass.rs  mouse.rs  render_context.rs  render_server.rs  screen_context.rs  screen_server.rs  servers.rs
vox-core/src/screens/: bench.rs  game.rs  menu.rs  screen.rs  screen_server.rs
vox-core/src/systems/: draw.rs  update.rs
vox-core/src/ui/: egui_renderer.rs  glyphon_renderer.rs
vox-core/src/voxel/: chunk.rs  coordinate.rs  types.rs
vox-core/src/voxels/: chunk.rs  voxel.rs  voxel_position.rs  voxel_registry.rs
vox-core/static/: index.html
vox-server/: Cargo.toml
vox-server/src/: chunk.rs  lib.rs  main.rs  types.rs
xtask/: Cargo.toml
xtask/src/: main.rs
