[package]
name = "vox"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29.15", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
pollster = "0.3"
cfg-if = "1"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
