[package]
name = "vox-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
winit = { version = "0.29.5", features = ["rwh_06"] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "0.20.0", features =  ["webgl"] }
pollster = "0.3"
cfg-if = "1"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

bevy_ecs = "0.13.2"

# wasm dependencies
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}
tobj = "4.0.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
