[package]
name = "vox-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# TODO: update wgpu and glyphon

[dependencies]
winit = { version = "0.30.5", features = ["rwh_06"] }
env_logger = "0.10"
log = "0.4"
wgpu = { version = "0.20", features = ["webgl"] }
pollster = "0.3"
cfg-if = "1"
bytemuck = { version = "1.16.1", features = ["derive"] }
anyhow = "1.0.86"
cgmath = "0.18"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
tobj = "4.0.2"
bevy_ecs = "0.14.0"
glyphon = { git = "https://github.com/goldeneas/glyphon", version = "0.5.0" }
egui = "0.28.1"
egui-wgpu = "0.28.1"
egui-winit = "0.28.1"

# wasm dependencies
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.67", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
